--- a/survey_form_styles.css
+++ b/survey_form_styles.css
@@ -61,5 +61,6 @@ input[type="submit"] {
 textarea {
   width: 71vw;
   margin: 1.5em;
-  min-height: 70px
+  min-height: 70px;
+  max-width: 400px;
 }
